--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
-    "Nuggies": "github:Nuggies-bot/nuggies-npm"
+    "nuggies": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
