--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
-    "nuggies": "^1.2.51"
+    "nuggies": "github:Nuggies-bot/nuggies-npm#dev"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
